--- a/buildspec.yml
+++ b/buildspec.yml
@@ -13,9 +13,11 @@ phases:
       - echo "Merging deployment files from S3 source..."
       - echo "Available environment variables:"
       - env | grep CODEBUILD_SRC_DIR || echo "No CODEBUILD_SRC_DIR variables found"
+      - echo "Checking WebappSourceArtifacts contents:"
+      - ls -la $CODEBUILD_SRC_DIR_WebappSourceArtifacts/ || echo "WebappSourceArtifacts directory not accessible"
       - echo "Copying appspec.yml and scripts from S3 artifact..."
-      - cp $CODEBUILD_SRC_DIR_deployment_source/appspec.yml . || cp $CODEBUILD_SRC_DIR_appspec_source/appspec.yml . || echo "Failed to copy appspec.yml - checking available sources"
-      - cp -r $CODEBUILD_SRC_DIR_deployment_source/scripts . || cp -r $CODEBUILD_SRC_DIR_appspec_source/scripts . || echo "Failed to copy scripts - checking available sources"
+      - cp $CODEBUILD_SRC_DIR_WebappSourceArtifacts/appspec.yml . || echo "Failed to copy appspec.yml from WebappSourceArtifacts"
+      - cp -r $CODEBUILD_SRC_DIR_WebappSourceArtifacts/scripts . || echo "Failed to copy scripts from WebappSourceArtifacts"
       - echo "Listing all available source directories:"
       - find $CODEBUILD_SRC_DIR* -type d -maxdepth 1 2>/dev/null || echo "No source directories found"
       - echo "Setting script permissions..."
