--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,13 +1,20 @@
 version: 0.2
 
 phases:
-  pre_build:
+  install:
+    runtime-versions:
+      nodejs: 20
     commands:
-      - echo "Checking GitHub source structure..."
+      - echo "Checking primary source structure..."
       - ls -la
-      - echo "Verifying Next.js project files..."
-      - if [ -f "package.json" ]; then echo "✓ package.json found"; else echo "✗ package.json not found"; exit 1; fi
-      - if [ -d "app" ]; then echo "✓ app directory found"; else echo "✗ app directory not found"; exit 1; fi
+      - echo "Checking if this is GitHub source (Next.js) or S3 source (appspec)..."
+      - if [ -f "package.json" ] && [ -d "app" ]; then
+        echo "✓ This appears to be GitHub source with Next.js project";
+        elif [ -f "appspec.yml" ] && [ -d "scripts" ]; then
+        echo "✓ This appears to be S3 source with deployment files";
+        else
+        echo "⚠ Unknown source structure";
+        fi
       - echo "Checking available source directories..."
       - ls -la $CODEBUILD_SRC_DIR_*/ 2>/dev/null || echo "No secondary sources found"
       - echo "Merging deployment files from S3 source..."
@@ -16,20 +23,15 @@ phases:
       - echo "Checking WebappSourceArtifacts contents:"
       - ls -la $CODEBUILD_SRC_DIR_WebappSourceArtifacts/ || echo "WebappSourceArtifacts directory not accessible"
       - echo "Copying appspec.yml and scripts from S3 artifact..."
+      - echo "Trying to copy from WebappSourceArtifacts directory..."
+      - ls -la $CODEBUILD_SRC_DIR_WebappSourceArtifacts/
       - cp $CODEBUILD_SRC_DIR_WebappSourceArtifacts/appspec.yml . || echo "Failed to copy appspec.yml from WebappSourceArtifacts"
       - cp -r $CODEBUILD_SRC_DIR_WebappSourceArtifacts/scripts . || echo "Failed to copy scripts from WebappSourceArtifacts"
-      - echo "Listing all available source directories:"
-      - find $CODEBUILD_SRC_DIR* -type d -maxdepth 1 2>/dev/null || echo "No source directories found"
       - echo "Setting script permissions..."
       - chmod +x scripts/*.sh 2>/dev/null || echo "No scripts found to set permissions"
       - echo "Final verification:"
       - ls -la appspec.yml 2>/dev/null && echo "✓ appspec.yml merged" || echo "✗ appspec.yml not found"
       - ls -la scripts/ 2>/dev/null && echo "✓ scripts directory merged" || echo "✗ scripts directory not found"
-
-  install:
-    runtime-versions:
-      nodejs: 20
-    commands:
       - echo "Installing NPM dependencies..."
       - npm ci
 
